check/testdata/invalid-legacy-files/action_invalid_frontmatter.html.markdown
---
layout: "example"
page_title: "Example: example_action"
description: |-
  Example action description.
---
<!-- Copyright IBM Corp. 2019, 2026 -->
<!-- SPDX-License-Identifier: MPL-2.0 -->

# Action: example_action

Byline.

## Example Usage

```terraform
action "example_action" "example" {
  config {
    example = "value"
  }
}
```

## Argument Reference

This action supports the following arguments:

* `example` - (Required) Example argument.
